[package]
name = "demo_os_date"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
registry = "1.2.3"
wchar = "0.11.0"
winapi = "0.3.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.windows]
version = "0.54.0"
features = ["Foundation", "Win32", "Win32_Globalization", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Time", "Win32_System_SystemServices", "Win32_System_SystemInformation"]
