[package]
name = "demo_os_date"
version = "0.1.0"
edition = "2021"
windows_subsystem = "windows"

[dependencies]
chrono = "0.4.37"
registry = "1.2.3"
wchar = "0.11.0"
winapi = "0.3.9"
once_cell = "1.19.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.windows]
version = "0.56.0"
features = ["Foundation", "Win32", "Win32_Globalization", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Time", "Win32_System_SystemServices", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_System_WinRT", "Win32_System_WinRT_Composition", "Foundation_Numerics"]
windows_subsystem = "windows"

[[bin]]
name = "demo_os_date_time"
path = "src/main.rs"
windows_subsystem="windows"